# math-book

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
book/: .gitignore  _quarto.yml  første-g.qmd  index.qmd  qpreamble.qmd  qpreamble.sty
book/1-G_book/: 0.index.qmd  1.modeller-og-variable.qmd  2.lineaere-funktioner.qmd  3.statistik.qmd
book/1-G_supplement/: 1.pemdas.qmd  10.fremskrivningsfaktor-og-vækstrate.qmd  2.ligninger.qmd  3.Reduktion.qmd  4.parenteser.qmd  5.brøker.qmd  6.kvadratsætninger.qmd  7.rødder-og-potenser.qmd  8.geometriske-formler.qmd  9.overslagsregning.qmd
book/2-G_supplement/: 0.index.qmd  diff_regning.qmd  eksponentiel_vaekst.qmd  enhedscirklen.qmd  faktorisering.qmd  funktioner.qmd  funktioner_og_grafer.qmd  fx_notation.qmd  kombinatorik.qmd  kvadratsaetninger.qmd  ligninger.qmd  ligningsloesning.qmd  lineaere_funktioner.qmd  log_funktioner.qmd  monotoniforhold.qmd  parenteser.qmd  pemdas.qmd  potenser_og_roedder.qmd  potensfunktioner.qmd  procent.qmd  projektion.qmd  reduktion.qmd  sandsynlighed.qmd  skalarprodukt.qmd  tangent.qmd  toligninger.qmd  tvaervektor.qmd  vektorer.qmd  vektorer_opsum.qmd
book/3-G_supplement/: 0.index.qmd  diff-regning.qmd
book/bilag/: 0.index.qmd  delelighedsregler.qmd  multiplikationstabel.qmd
book/hf-opgaver/: hf-C.ipynb  hf-C.qmd  hf-index.qmd
src/math_book/: __init__.py
